--- a/node-lib/package.json
+++ b/node-lib/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start:dev": "NODE_ENV=dev nodemon -r dotenv/config index.js dotenv_config_path=.env.dev",
+    "start:prod": "NODE_ENV=prod node -r dotenv/config index.js dotenv_config_path=.env.prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
