--- a/node-boiler-plate/package.json
+++ b/node-boiler-plate/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "app.js",
   "engines": {
     "node": ">=12.0.0"
   },
   "scripts": {
-    "dev": "NODE_ENV=dev nodemon -r dotenv/config index.js dotenv_config_path=.env.dev",
-    "prod": "NODE_ENV=prod node -r dotenv/config index.js dotenv_config_path=.env.prod"
+    "dev": "NODE_ENV=dev nodemon -r dotenv/config app.js dotenv_config_path=.env.dev",
+    "prod": "NODE_ENV=prod node -r dotenv/config app.js dotenv_config_path=.env.prod"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "winston": "^3.14.1"
   },
