helmet and configuration nodejs

--- a/node-boiler-plate/.env.dev
+++ b/node-boiler-plate/.env.dev
@@ -1,5 +1,8 @@
+# environment
 NODE_ENV=dev
 HOST=localhost
 PORT=3000
+
+# JWT Token Info
 ACCESS_TOKEN_SECRET=dev-env-token
 ACCESS_TOKEN_EXPIRY=1d
