--- a/node-boiler-plate/.env.prod
+++ b/node-boiler-plate/.env.prod
@@ -1,5 +1,8 @@
+# environment
 NODE_ENV=prod
 HOST=localhost
 PORT=8000
+
+# JWT Token Info
 ACCESS_TOKEN_SECRET=prod-env-token
 ACCESS_TOKEN_EXPIRY=1d
