errorhandler middleware nodejs

--- a/node-boiler-plate/.env.dev
+++ b/node-boiler-plate/.env.dev
@@ -3,6 +3,9 @@ NODE_ENV=dev
 HOST=localhost
 PORT=3000
 
+#CORS
+CORS_ORIGIN=*
+
 # JWT Token Info
 ACCESS_TOKEN_SECRET=dev-env-token
 ACCESS_TOKEN_EXPIRY=1d
