--- a/node-boiler-plate/.env.prod
+++ b/node-boiler-plate/.env.prod
@@ -3,6 +3,9 @@ NODE_ENV=prod
 HOST=localhost
 PORT=8000
 
+#CORS
+CORS_ORIGIN=*
+
 # JWT Token Info
 ACCESS_TOKEN_SECRET=prod-env-token
 ACCESS_TOKEN_EXPIRY=1d
