--- a/node-boiler-plate/package.json
+++ b/node-boiler-plate/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "joi": "^17.13.3",
