--- a/node-boiler-plate/.env.dev
+++ b/node-boiler-plate/.env.dev
@@ -1,6 +1,9 @@
 #PORT
 PORT=3000
 
+# URL of the Mongo DB
+MONGODB_URL=mongodb+srv://plancy07:plancy07@cluster0.owjqw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 #CORS
 CORS_ORIGIN=*
 
