--- a/node-boiler-plate/package.json
+++ b/node-boiler-plate/package.json
@@ -23,6 +23,7 @@
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "joi": "^17.13.3",
+    "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
     "winston": "^3.14.1"
   },
