--- a/node-boiler-plate/.env.dev
+++ b/node-boiler-plate/.env.dev
@@ -9,4 +9,5 @@ CORS_ORIGIN=*
 
 # JWT Token Info
 ACCESS_TOKEN_SECRET=dev-env-token
-ACCESS_TOKEN_EXPIRY=1d
+ACCESS_TOKEN_EXPIRY=5s
+REFRESH_TOKEN_EXPIRY=30d
